support Hadoop installation and compile locally