@@ -4,7 +4,7 @@
 cd /opt/module
 
 echo "untar kafka ..."
-tar -xvzf kafka_2.12-2.6.1.tgz
+tar -xvzf kafka_2.12-2.6.1.tgz >/dev/null 2>&1
 
 echo "removing kafka_2.12-2.6.1.tgz tar file..."
 rm kafka_2.12-2.6.1.tgz
@@ -23,5 +23,8 @@ source /etc/profile
 
 echo "create logs folder..."
 mkdir -p kafka_2.12-2.6.1/logs
+
+sed -i "s/export KAFKA_HEAP_OPTS=\"-Xmx1G -Xms1G\"/#export KAFKA_HEAP_OPTS=\"-Xmx1G -Xms1G\"/g" kafka_2.12-2.6.1/bin/kafka-server-start.sh
+sed -i "/#export KAFKA_HEAP_OPTS=/a\    export KAFKA_HEAP_OPTS=\"-server -Xms2G -Xmx2G -XX:PermSize=128m -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:ParallelGCThreads=8 -XX:ConcGCThreads=5 -XX:InitiatingHeapOccupancyPercent=70\"\n    export JMX_PORT=\"9999\"" kafka_2.12-2.6.1/bin/kafka-server-start.sh
 
 echo "kafka installation finished!"
